--- a/index.css
+++ b/index.css
@@ -1,6 +1,7 @@
 *{
     margin: 0;
     padding: 0;
+    cursor:default;
 }
 header{
     display: flex;
@@ -18,11 +19,15 @@ header h2{
 }
 header nav a{
     color: white;
-    margin-right: 70px;
+    padding: 20px 70px;
     text-decoration: none;
     font-family: 'Lucida Sans';
     font-size: 15px;
 }
+header nav a:hover{
+    background-color: rgba(4, 54, 119, 0.6);
+}
+
 .con-welcome{
     display: flex;
     justify-content: space-evenly;
@@ -38,11 +43,11 @@ header nav a{
 }
 .con-welcome img:hover{
     box-shadow: 2px 2px 5px #98E4FF;
-    background-color: #687EFFaa;
+    background-color: #3a58ffaa;
 }
 .quate{
     width: 15cm;
-    color: #b8b8b8;
+    color: #e2e2e2;
 }
 .quate h3{
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
@@ -57,15 +62,39 @@ header nav a{
 }
 .wall{
     
-    background-image: url("./wallpapper.png");
+    background-image: url("./public\ img/wallpapper.png");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: 30% 20%;
 }
 .description{
-    background:linear-gradient(to bottom,rgb(29, 29, 70),rgb(46, 132, 225));
-    color: white;
+    background:linear-gradient(to bottom,rgb(3, 24, 87),rgb(47, 71, 189),rgb(110, 160, 242));
+    padding: 20px;
+    color: rgb(255, 255, 255);
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 17px;
 }
 .description > div{
-    width: 50%;
+    display: flex;
+    margin: 30px 0;
+}
+.description .game{
+    justify-content: flex-end;
+}
+.description > div > div{
+    width: 60%;
+}
+.description h2{
+    text-align: center;
+    text-decoration: underline;
+    text-underline-offset: 8px;
+    margin-bottom: 20px;
+}
+footer{
+    display: flex;
+    justify-content: center;
+}
+footer p{
+    font-size: 20px;
+    padding: 10px;
 }
