--- a/index.css
+++ b/index.css
@@ -93,8 +93,35 @@ header nav a:hover{
 footer{
     display: flex;
     justify-content: center;
+    background-color: rgb(220, 235, 255);
 }
 footer p{
     font-size: 20px;
-    padding: 10px;
+    padding: 25px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+.media-container > div{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 0 10px;
+}
+.media-container img{
+    width: 50px;
+}
+.media-container{
+    display: flex;
+    align-items: center;
+    padding: 20px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+.socialmedia{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: white;
+    padding: 30px;
+}
+.media-container .active img{
+    width: 70px;
 }
